WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268708
[Unified Text Replacement] Replacement document markers do not have their relevant marked text ranges
https://bugs.webkit.org/show_bug.cgi?id=268708
Summary
[Unified Text Replacement] Replacement document markers do not have their rel...
Richard Robinson
Reported
2024-02-03 20:34:45 PST
rdar://122254085
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-02-05 21:44:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23901
EWS
Comment 2
2024-02-06 19:34:07 PST
Committed
274193@main
(1721c34efc9e): <
https://commits.webkit.org/274193@main
> Reviewed commits have been landed. Closing PR #23901 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug